<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrucoActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/time1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/peb_time1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/time2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/peb_time2"
            android:layout_marginTop="24dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/placar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_below="@id/time1">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="64sp"
            android:text="@string/peb_placar1"
            android:gravity="center_horizontal"
            android:padding="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="64sp"
            android:text="x"
            android:gravity="center_horizontal"
            android:padding="24dp"
            android:layout_marginTop="24dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="64sp"
            android:text="@string/peb_placar2"
            android:gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:padding="24dp"
            android:layout_marginTop="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vitorias"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@id/placar">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/peb_vitorias1"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/peb_vitorias2"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:gravity="end"
            android:layout_margin="20dp"/>
    </LinearLayout>

    <TextView
        android:layout_weight="1"
        android:id="@+id/add_pontos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/vitorias"
        android:text="@string/adicionar_gols"
        android:textAllCaps="true"
        android:padding="20dp"
        android:textColor="#000"/>

    <LinearLayout
        android:id="@+id/botoes1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_below="@id/add_pontos">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+1"
            android:textSize="24sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-1"
            android:textSize="24sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>



</LinearLayout>