<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrucoActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/time1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/fut_time1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/time2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/fut_time2"
            android:layout_marginTop="24dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/placar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_below="@id/time1">

        <Button
            android:id="@+id/fut_button_time1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="64sp"
            android:text="@string/fut_placar1"
            android:gravity="center_horizontal"
            android:background="@color/timeSelecionado"
            android:padding="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="64sp"
            android:text="X"
            android:gravity="center_horizontal"
            android:padding="24dp"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/fut_button_time2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="64sp"
            android:text="@string/fut_placar2"
            android:gravity="center_horizontal"
            android:background="@color/timeNaoSelecionado"
            android:layout_marginEnd="20dp"
            android:padding="24dp"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vitorias"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@id/placar">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fut_vitorias1"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fut_vitorias2"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:gravity="end"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

    <TextView
        android:layout_weight="1"
        android:id="@+id/add_pontos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/vitorias"
        android:text="@string/adicionar_gols"
        android:textAllCaps="true"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#000"/>

    <LinearLayout
        android:id="@+id/botoes1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_below="@id/add_pontos">

        <Button
            android:id="@+id/fut_plus_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+1"
            android:textSize="24sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/fut_minus_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="-1"
            android:textSize="24sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <TextView
        android:layout_weight="1"
        android:id="@+id/tempo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/vitorias"
        android:text="00:00"
        android:textAllCaps="true"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#000"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ic_play_arrow_black_24dp"/>

        <SeekBar
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:padding="10dp"
            android:max="60" />

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="12dp"
            android:src="@drawable/ic_pause_black_24dp"/>
    </LinearLayout>


</LinearLayout>